--- a/src/app/components/ui/profile-promocodes/profile-promocodes.component.html
+++ b/src/app/components/ui/profile-promocodes/profile-promocodes.component.html
@@ -1,7 +1,10 @@
 <div class="item" *ngFor="let item of items$ | async">
-	<button *ngIf="!item.expired" (click)="showQRCodeModal()">Показать qr-код</button>
+	<button *ngIf="item.valid" (click)="showQRCodeModal()">Показать qr-код</button>
 	<div class="value">{{item.discount}} ₽</div>
-	<svg-icon [src]="item.expired ? 'assets/expiredCoupon.svg' : 'assets/activeCoupon.svg'"></svg-icon>
+	<svg-icon
+		src="assets/coupon.svg"
+		[class.invalid]="!item.valid"
+	></svg-icon>
 	<div class="description">
 		<div class="label">
 			<span>Дата создания:</span>
