Added QR-code modal for profile promo-codes tab

--- a/src/app/components/ui/profile-promocodes/profile-promocodes.component.html
+++ b/src/app/components/ui/profile-promocodes/profile-promocodes.component.html
@@ -1,5 +1,5 @@
 <div class="item" *ngFor="let item of items$ | async">
-	<button *ngIf="item.valid" (click)="showQRCodeModal()">Показать qr-код</button>
+	<button *ngIf="item.valid" (click)="showQRCodeModal(item.link)">Показать qr-код</button>
 	<div class="value">{{item.discount}} ₽</div>
 	<svg-icon
 		src="assets/coupon.svg"
