--- a/src/app/components/ui/header/header.component.scss
+++ b/src/app/components/ui/header/header.component.scss
@@ -8,9 +8,6 @@ header {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	@media (max-width: 405px) {
-		zoom: 0.8;
-	}
 }
 
 .container {
@@ -98,12 +95,13 @@ header {
 		}
 	}
 	.mobile {
-		@media (min-width: 970px) {
-			display: none;
-		}
+		display: none;
 	}
-	.desktop {
-		@media (max-width: 970px) {
+	@media (max-width: 970px) {
+		.mobile {
+			display: block;
+		}
+		.desktop {
 			display: none;
 		}
 	}
