--- a/src/app/components/modals/mobile-nav/mobile-nav.component.scss
+++ b/src/app/components/modals/mobile-nav/mobile-nav.component.scss
@@ -3,3 +3,41 @@
 	height: 100vh;
 	color: black;
 }
+
+.card {
+	display: flex;
+	gap: 12px;
+	padding-top: 64px;
+	img {
+		width: 64px;
+		height: 64px;
+	}
+}
+
+.info {
+	display: flex;
+	flex-direction: column;
+	padding: 6px 0;
+	gap: 4px;
+}
+
+.balance {
+	display: flex;
+	gap: 8px;
+	align-items: center;
+}
+
+.nav {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	gap: 32px;
+	padding-top: 48px;
+	a {
+		color: #000B26E0;
+		font-size: 18px;
+		line-height: 24px;
+		text-decoration: none;
+		font-weight: 700;
+	}
+}
