--- a/src/app/components/modals/mobile-nav/mobile-nav.component.html
+++ b/src/app/components/modals/mobile-nav/mobile-nav.component.html
@@ -2,13 +2,13 @@
 	<div></div>
 	<svg-icon src="assets/close.svg" (click)="close()"></svg-icon>
 </div>
-<div class="card">
-	<img [src]="cache$!.avatar_url ?? 'assets/defaultAvatarFull.png'" alt="Изображение профиля" />
+<div class="card" *ngIf="cache$">
+	<img [src]="cache$.avatar_url ?? 'assets/defaultAvatarFull.png'" alt="Изображение профиля" />
 	<div class="info">
-		<b>{{cache$!.display_name}}</b>
+		<b>{{cache$.display_name}}</b>
 		<div class="balance">
 			<svg-icon src="assets/ecoCoin.svg"></svg-icon>
-			<b>{{cache$!.balance}}</b>
+			<b>{{cache$.balance}}</b>
 		</div>
 	</div>
 </div>
