Made logo interactive & forward to main page & slightly changed map position

--- a/src/app/components/ui/header/header.component.html
+++ b/src/app/components/ui/header/header.component.html
@@ -1,7 +1,11 @@
 <header>
 	<div class="container">
 		<div class="logo">
-			<img src="assets/ecoRus.svg" alt="EcoRus logo"/>
+			<img
+				src="assets/ecoRus.svg"
+				alt="EcoRus logo"
+				routerLink="/"
+			/>
 		</div>
 		<ul class="selectors">
 			<li *ngFor="let location of locations$">
